--- a/src/main/resources/data/magicmirror/loot_tables/inject/end_city_treasure.json
+++ b/src/main/resources/data/magicmirror/loot_tables/inject/end_city_treasure.json
@@ -6,7 +6,7 @@
       "entries":[
         {
           "type": "item",
-          "name": "magicmirror:dimensional_mirror",
+          "name": "magicmirror:dimensional_mirror_end",
           "weight": 40
         },
         {
