--- a/src/main/resources/data/magicmirror/loot_tables/inject/shipwreck_treasure.json
+++ b/src/main/resources/data/magicmirror/loot_tables/inject/shipwreck_treasure.json
@@ -7,7 +7,12 @@
         {
           "type": "item",
           "name": "magicmirror:magic_mirror",
-          "weight": 5
+          "weight": 3
+        },
+        {
+          "type": "item",
+          "name": "magicmirror:magic_mirror_ocean",
+          "weight": 2
         },
         {
           "type": "empty",
