--- a/src/main/resources/data/magicmirror/loot_tables/buried_treasure.json
+++ b/src/main/resources/data/magicmirror/loot_tables/buried_treasure.json
@@ -1,23 +1,25 @@
 {
+  "type": "minecraft:chest",
   "pools": [
     {
       "name": "main",
-      "rolls": 1,
+      "rolls": 1.0,
       "entries":[
         {
           "type": "item",
           "name": "magicmirror:magic_mirror",
-          "weight": 1
+          "weight": 1.0
         },
         {
           "type": "item",
-          "name": "magicmirror:ice_mirror",
-          "weight": 1
+          "name": "magicmirror:magic_mirror_ocean",
+          "weight": 2.0
         },
         {
           "type": "empty",
-          "weight": 98
+          "weight": 50.0
         }
       ]
-    }]
+    }
+  ]
 }
