--- a/src/main/resources/data/magicmirror/loot_tables/end_city_treasure.json
+++ b/src/main/resources/data/magicmirror/loot_tables/end_city_treasure.json
@@ -1,18 +1,20 @@
 {
+  "type": "minecraft:chest",
   "pools": [
     {
       "name": "main",
-      "rolls": 1,
+      "rolls": 1.0,
       "entries":[
         {
           "type": "item",
           "name": "magicmirror:dimensional_mirror_end",
-          "weight": 40
+          "weight": 40.0
         },
         {
           "type": "empty",
-          "weight": 60
+          "weight": 60.0
         }
       ]
-    }]
+    }
+  ]
 }
