--- a/src/main/resources/data/magicmirror/loot_tables/village_snowy_house.json
+++ b/src/main/resources/data/magicmirror/loot_tables/village_snowy_house.json
@@ -1,17 +1,23 @@
 {
+  "type": "minecraft:chest",
   "pools": [
     {
       "name": "main",
-      "rolls": 1,
+      "rolls": 1.0,
       "entries":[
         {
           "type": "item",
           "name": "magicmirror:magic_mirror",
-          "weight": 5
+          "weight": 1.0
+        },
+        {
+          "type": "item",
+          "name": "magicmirror:ice_mirror",
+          "weight": 1.0
         },
         {
           "type": "empty",
-          "weight": 95
+          "weight": 98.0
         }
       ]
     }]
