--- a/build.gradle
+++ b/build.gradle
@@ -9,23 +9,18 @@ buildscript {
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
-// Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.0.3.5'
-group = 'com.codenamerevy.magicmirror' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+version = '1.0.3.6'
+group = 'com.codenamerevy.magicmirror'
 archivesBaseName = 'magicmirror'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
 minecraft {
-    // snapshot_YYYYMMDD   Snapshot are built nightly.
-    // stable_#            Stables are built at the discretion of the MCP team.
-    mappings channel: 'snapshot', version: '20191017-1.14.3'
-
-    // Default run configurations.
-    // These can be tweaked, removed, or duplicated as needed.
+    //Mappings Version
+    mappings channel: 'snapshot', version: '20191222-1.14.3'
     runs {
         client {
             workingDirectory project.file('run')
@@ -81,20 +76,7 @@ minecraft {
 
 dependencies {
     // Forge version
-    minecraft 'net.minecraftforge:forge:1.14.4-28.1.56'
-
-    // You may put jars on which you depend on in ./libs or you may define them like so..
-    // compile "some.group:artifact:version:classifier"
-    // compile "some.group:artifact:version"
-
-    // Real examples
-    // compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-    // compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
-
-    // For more info...
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
-
+    minecraft 'net.minecraftforge:forge:1.15.1-30.0.15'
 }
 
 // Manifest for reading by the runtime..
@@ -103,7 +85,7 @@ jar {
         attributes([
             "Specification-Title": "MagicMirrors",
             "Specification-Vendor": "CodenameRevy",
-            "Specification-Version": "1", // We are version 1 of ourselves
+            "Specification-Version": "1",
             "Implementation-Title": project.name,
             "Implementation-Version": "${version}",
             "Implementation-Vendor" :"CodenameRevy",
