--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,10 @@ buildscript {
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'eclipse'
+apply plugin: 'idea'
 apply plugin: 'maven-publish'
 
-version = '1.0.3.6'
+version = '1.0.4.0'
 group = 'com.codenamerevy.magicmirror'
 archivesBaseName = 'magicmirror'
 
@@ -20,7 +20,7 @@ sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = co
 
 minecraft {
     //Mappings Version
-    mappings channel: 'snapshot', version: '20191222-1.14.3'
+    mappings channel: 'snapshot', version: '20191227-1.14.3'
     runs {
         client {
             workingDirectory project.file('run')
@@ -76,7 +76,7 @@ minecraft {
 
 dependencies {
     // Forge version
-    minecraft 'net.minecraftforge:forge:1.15.1-30.0.15'
+    minecraft 'net.minecraftforge:forge:1.15.1-30.0.36'
 }
 
 // Manifest for reading by the runtime..
