--- a/src/main/resources/data/magicmirror/loot_tables/inject/end_city_treasure.json
+++ b/src/main/resources/data/magicmirror/loot_tables/inject/end_city_treasure.json
@@ -8,6 +8,11 @@
           "type": "item",
           "weight": 40,
           "name": "magicmirror:dimensional_mirror_end"
+        },
+        {
+          "type": "item",
+          "weight": 60,
+          "name": "minecraft:stick"
         }
       ]
     }
