--- a/src/main/resources/data/magicmirror/loot_tables/inject/village_snowy_house.json
+++ b/src/main/resources/data/magicmirror/loot_tables/inject/village_snowy_house.json
@@ -13,7 +13,13 @@
           "type": "item",
           "weight": 1,
           "name": "magicmirror:ice_mirror"
+        },
+        {
+          "type": "item",
+          "weight": 75,
+          "name": "minecraft:stick"
         }
       ]
-    }]
+    }
+  ]
 }
