--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -10,7 +10,8 @@ displayURL="https://github.com/CodenameRevy/MagicMirrors"
 logoFile="logo.png"
 credits='''
 CodenameRevy (Mod developer),
-MichaelLimaRodrigues (Brazilian Portuguese translations)'''
+MichaelLimaRodrigues (Brazilian Portuguese translations)
+Sn4pe (Spanish translations)'''
 authors="CodenameRevy"
 description='''
 Magic Mirror mod adds several new items that are used to teleport you to your bed location almost instantly!
