--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -11,7 +11,8 @@ logoFile="logo.png"
 credits='''
 CodenameRevy (Mod developer),
 MichaelLimaRodrigues (Brazilian Portuguese translations)
-Sn4pe (Spanish translations)'''
+Sn4pe (Spanish translations)
+DirectorX (Russian translations)'''
 authors="CodenameRevy"
 description='''
 Magic Mirror mod adds several new items that are used to teleport you to your bed location almost instantly!
