ko_kr.json (mindy15963)

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -13,7 +13,8 @@ credits='''
 CodenameRevy (Mod developer),
 MichaelLimaRodrigues (Brazilian Portuguese translations)
 Sn4pe (Spanish translations)
-DirectorX (Russian translations)'''
+DirectorX (Russian translations)
+mindy15963 (Korean translations)'''
 authors="CodenameRevy"
 description='''
 Magic Mirror mod adds several new items that are used to teleport you to your bed location almost instantly!
