--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -11,7 +11,7 @@ displayURL="codenamerevy.github.io"
 logoFile="logo.png"
 credits='''
 CodenameRevy (Mod developer),
-MichaelLimaRodrigues (Brazilian Portuguese translations)
+Mikeliro (Brazilian Portuguese translations)
 Sn4pe (Spanish translations)
 DirectorX (Russian translations)
 mindy15963 (Korean translations)'''
